# etna-tracer

./: CMakeLists.txt
cmake/: Findetna.cmake
shaders/: compile.sh  compute.shader  compute.spv  tracer.shader
shaders/intersections/: aabb-intersection.shader  bvh-intersection.shader  bvh_intersection.shader  intersections.shader  sphere-intersection.shader  sphere_intersection.shader  triangle-intersection.shader  triangle_intersection.shader
shaders/materials/: atmosphere.shader  dielectric.shader  lambertian.shader  light.shader  materials.shader  metal.shader
shaders/structures/: environment.shader  hit-record.shader  ray.shader
shaders/utils/: constants.shader  random.shader
src/: app.cpp  app.hpp  compute-program-buffer.cpp  compute-program-buffer.hpp  compute-program.cpp  compute-program.hpp  main.cpp  renderer.cpp  renderer.hpp
src/etna/smart-buffer/: smart-buffer-factory.hpp  smart-buffer.hpp
src/scene/: buffer-chunk.cpp  buffer-chunk.hpp  build-cube.cpp  build-cube.hpp  build-model.cpp  build-model.hpp  build-rect.cpp  build-rect.hpp  scene-buffer-serializable.cpp  scene-buffer-serializable.hpp  scene-buffer.cpp  scene-buffer.hpp  scene-renderer.cpp  scene-renderer.hpp  scene-resource.hpp  scene.cpp  scene.hpp
src/scene/hittables/: hittable-list.cpp  hittable-list.hpp  hittable-sphere.cpp  hittable-sphere.hpp  hittable-triangle.cpp  hittable-triangle.hpp  hittable.cpp  hittable.hpp
src/scene/materials/: material-atmosphere.cpp  (+12 more)
src/scenes/: disco-spheres.cpp  disco-spheres.hpp  tank.cpp  tank.hpp
src/utils/: camera.cpp  camera.hpp  vec4.hpp
(+4 files in other folders)
